--- a/week9/index.html
+++ b/week9/index.html
@@ -3,12 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>PIXI Projection</title>
-        <script src="./node_modules/jquery/dist/jquery.js"></script>
-
+        <style src="./src/css/aaa.css"></style>
         <script src="./dist/bundle.js"></script>
 
-
-        <style>* {padding: 0; margin: 0}</style>
+        <style>* {padding: 0; margin: 0; /*width: 100%; max-width: 1024px;*/}</style>
     </head>
     <body>
     </body>
